--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kde-no-move-max-win (3:0.3-1) unstable; urgency=low
+
+  * New upstream version.
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Tue, 19 Aug 2014 18:41:33 +0000
+
 kde-no-move-max-win (3:0.2-2) unstable; urgency=low
 
   * Fixed changelog date.
