--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kde-no-move-max-win (3:0.4-1) unstable; urgency=low
+
+  * New upstream version.
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Mon, 13 Oct 2014 12:33:17 +0000
+
 kde-no-move-max-win (3:0.3-1) unstable; urgency=low
 
   * New upstream version.
