--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kde-no-move-max-win (3:0.8-1) unstable; urgency=low
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Tue, 07 Apr 2015 17:41:59 +0000
+
 kde-no-move-max-win (3:0.7-1) unstable; urgency=low
 
   * New upstream version (local package).
