--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kde-no-move-max-win (3:1.3-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Sun, 15 Jan 2017 15:32:31 +0000
+
 kde-no-move-max-win (3:1.2-1) unstable; urgency=medium
 
   * New upstream version (local package).
