--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kde-no-move-max-win (3:1.5-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Mon, 27 Feb 2017 01:40:58 +0000
+
 kde-no-move-max-win (3:1.4-1) unstable; urgency=medium
 
   * New upstream version (local package).
